Progress bars no longer z-indexed and causing issues

--- a/style/transmission/common.css
+++ b/style/transmission/common.css
@@ -53,12 +53,11 @@ input[type="text"],input[type="password"] {
 }
 
 #login {
-  position: absolute;
+  position: relative;
   width: 100%;
   height: 100%;
   color:#A3A5B5;
-  background: #2A2C3C;
-  z-index:1;
+  background: #FFF;
 }
 
 #login form {
@@ -316,12 +315,8 @@ ul.torrent_list .torrent_progress_bar_container {
 }
 ul.torrent_list .torrent_progress_bar {
   height: 100%;
-  position: absolute;
   top: 0px;
   left: 0px;
-}
-ul.torrent_list .torrent_progress_bar.complete {
-  z-index: 1;
 }
 ul.torrent_list .torrent_progress_bar.complete.paused {
   background: rgba(131, 131, 131, 1);
@@ -336,7 +331,6 @@ ul.torrent_list .torrent_progress_bar.complete.seeding {
   background: rgba(60, 210, 7, 1);
 }
 ul.torrent_list .torrent_progress_bar.incomplete {
-  z-index: 0;
   width: 100%;
 }
 ul.torrent_list .torrent_progress_bar.incomplete.paused {
